kube/components/fq/trino/fq-trino-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fq-trino-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fq-trino-worker
  template:
    metadata:
      labels:
        app: fq-trino-worker
    spec:
      containers:
      - image: trinodb/trino:471
        imagePullPolicy: IfNotPresent
        name: trino
        ports:
          - containerPort: 8080
        command: ["/usr/lib/trino/bin/run-trino"]
        args: ["-v"]
        volumeMounts:
          # trino config files
          - name: fq-trino-configs-volume
            mountPath: /home/trino/config/config.properties
            subPath: config.properties.worker
          - name: fq-trino-configs-volume
            mountPath: /home/trino/config/jvm.config
            subPath: jvm.config
          - name: fq-trino-configs-volume
            mountPath: /home/trino/config/node.properties
            subPath: node.properties
          - name: fq-trino-configs-volume
            mountPath: etc/trino/password-authenticator.properties
            subPath: password-authenticator.properties
          - name: fq-trino-configs-volume
            mountPath: etc/trino/password.db
            subPath: password.db
          - name: fq-trino-configs-volume
            mountPath: etc/trino/access-control.properties
            subPath: access-control.properties
          - name: fq-trino-configs-volume
            mountPath: etc/trino/rules.json
            subPath: rules.json
          # trino datasource config files
          #- name: trino-datasource-configmap-volume
          #  mountPath: etc/trino/catalog/gravitino.properties
          #  subPath: gravitino.properties
          - name: fq-trino-datasource-configs-volume
            mountPath: etc/trino/catalog/hms_db.properties
            subPath: hms_db.properties
         # - name: trino-datasource-configmap-volume
         #   mountPath: etc/trino/catalog/llm.properties
         #   subPath: llm.properties
          - name: fq-trino-datasource-configs-volume
            mountPath: etc/trino/catalog/iceberg.properties
            subPath: iceberg.properties
          - name: fq-trino-datasource-configs-volume
            mountPath: etc/trino/catalog/minio.properties
            subPath: minio.properties
          - name: fq-trino-datasource-configs-volume
            mountPath: etc/trino/catalog/steampipe_db.properties
            subPath: steampipe_db.properties
          - name: fq-trino-datasource-configs-volume
            mountPath: etc/trino/catalog/nessie.properties
            subPath: nessie.properties
          #- name: trino-datasource-configmap-volume
          #  mountPath: etc/trino/catalog/trino.properties
          #  subPath: trino.properties
      volumes:
        - name: fq-trino-configs-volume
          configMap:
            name: fq-trino-configs
        - name: fq-trino-datasource-configs-volume
          configMap:
            name: fq-trino-datasource-configs
  volumeClaimTemplates:
    - metadata:
        name: fq-trino-tmp-data
      spec:
        storageClassName: manual
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
