kube/components/fq/trino/fq-trino-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fq-trino
  labels:
    app: fq-trino
spec:
  type: NodePort
  ports:
    - name: https
      port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
  selector:
    app: fq-trino-coordinator
