kube/components/fq/trino/fq-trino-egress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fq-allow-external-traffic-to-fq-trino
spec:
  podSelector:
    matchExpressions:
      - { key: app, operator: In, values: [ fq-hms, fq-minio, fq-mysql, fq-trino-coordinator, steampipe, superset, openmetadata-server, openmetadata-ingestion, metabase, opa, nessie, polaris ] }
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: aix
          podSelector:
            matchLabels:
              app: opa
      ports:
        - protocol: TCP
          port: 8181
    - to:
        - ipBlock:
            cidr: 10.1.0.0/24
      ports:
        - protocol: TCP
          port: 9083
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 19120
        - protocol: TCP
          port: 30120
